# GRNimmuneClock

./: .gitignore  LICENSE  MANIFEST.in  README.md  SETUP_SUMMARY.md  pyproject.toml  tutorial.ipynb
grnimmuneclock/: __init__.py  __version__.py  core.py  helpers.py  plotting.py  training.py
grnimmuneclock/data/: consensus_grn_CD4T.csv  consensus_grn_CD8T.csv  example_data.h5ad
grnimmuneclock/models/CD4T/: feature_names_V1.txt  metadata.json  model_V1.pkl
grnimmuneclock/models/CD8T/: feature_names_V1.txt  metadata.json  model_V1.pkl
