[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grnimmuneclock"
version = "1.0.0"
description = "Cell-type specific aging clocks for immune cells based on gene regulatory networks"
authors = [{name = "Jalil Nourisa", email = "jalil.nourisa@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["aging", "immune cells", "gene regulatory networks", "aging clock", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "anndata>=0.8.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "joblib>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "statsmodels>=0.13.0",
    "optuna>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/janursa/GRNimmuneClock"
Documentation = "https://github.com/janursa/GRNimmuneClock/blob/main/README.md"
Repository = "https://github.com/janursa/GRNimmuneClock"
"Bug Tracker" = "https://github.com/janursa/GRNimmuneClock/issues"

[tool.setuptools]
packages = ["grnimmuneclock"]

[tool.setuptools.package-data]
grnimmuneclock = [
    "models/**/*",
    "data/*.h5ad",
    "data/*.csv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
